몽고디비 QueryDSL 적용기

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,15 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
-
+  data:
+    mongodb:
+      host: ec2-43-201-10-213.ap-northeast-2.compute.amazonaws.com
+      port: 27017
+      database: query
+      username: query
+      password: query
+      authentication-database: admin
+  
   jpa:
     hibernate:
       ddl-auto: none
